--- a/index.html
+++ b/index.html
@@ -4,73 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie List</title>
+    <title>Real Estate Viewer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Movie List</h1>
+        <h1>Real Estate Viewer</h1>
     </header>
     <main>
 
     <form>
         <input 
             type='text'
-            id="title"
-            placeholder="What's the movie's title?"/>
+            id="address"
+            placeholder="What's the house address"/>
+        <input 
+            type='text'
+            id="price"
+            placeholder='What is the price?'/>
         <input 
             type='text'
             id="img"
             placeholder='Paste an image URL'/>
-        <section id="ratings-container">
-            <p>Rate the movie:</p>
-            <div id="radio-container">
-                <label for="one">
-                    <input
-                        type="radio"
-                        name="ratings"
-                        value="1"
-                        id="one"/>
-                    1
-                </label>
-                <label for="two">
-                    <input
-                        type="radio"
-                        name="ratings"
-                        value="2"
-                        id="two"/>
-                    2
-                </label>
-                <label for="three">
-                    <input
-                        type="radio"
-                        name="ratings"
-                        value="3"
-                        id="three"/>
-                    3
-                </label>
-                <label for="four">
-                    <input
-                        type="radio"
-                        name="ratings"
-                        value="4"
-                        id="four"/>
-                    4
-                </label>
-                <label for="five">
-                    <input
-                        type="radio"
-                        name="ratings"
-                        value="5"
-                        id="five"/>
-                    5
-                </label>
-            </div>
-        </section>
-        <button>add movie</button>
+        <button>add house</button>
     </form>
 
-    <section id="movies-container"></section>
+    <section id="houses-container"></section>
 
     </main>
 
